<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/hidinput"
        android:layout_width="870px"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000">

        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@drawable/queryhead"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/main_btn5"
            android:textColor="@color/white"
            android:textSize="35px" />

        <RelativeLayout
            android:id="@+id/contentlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head"
            android:background="@drawable/querybody">

            <RelativeLayout
                android:id="@+id/licence"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25px"
                android:layout_centerHorizontal="true"
                android:background="#00000000">

                <TextView
                    android:id="@+id/licencetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/base_setting_title_licence"
                    android:textColor="#156ec9"
                    android:textSize="25px" />


                <RadioGroup
                    android:id="@+id/licencegroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105px"
                    android:layout_toRightOf="@+id/licencetitle"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/licenceopen"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_licence_open"
                        android:textColor="#666666"
                        android:textSize="25px" />

                    <RadioButton
                        android:id="@+id/licencecolse"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_licence_close"
                        android:textColor="#666666"
                        android:textSize="25px" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/face"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_below="@+id/licence"
                android:layout_centerHorizontal="true"
                android:background="#00000000">

                <TextView
                    android:id="@+id/facetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/base_setting_title_face"
                    android:textColor="#156ec9"
                    android:textSize="25px" />


                <RadioGroup
                    android:id="@+id/facegroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105px"
                    android:layout_toRightOf="@+id/facetitle"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/faceopen"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_face_open"
                        android:textColor="#666666"
                        android:textSize="25px" />

                    <RadioButton
                        android:id="@+id/facecolse"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_face_close"
                        android:textColor="#666666"
                        android:textSize="25px" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/safe"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_below="@+id/face"
                android:layout_centerHorizontal="true"
                android:background="#00000000">

                <TextView
                    android:id="@+id/safetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/base_setting_title_safe"
                    android:textColor="#156ec9"
                    android:textSize="25px" />


                <RadioGroup
                    android:id="@+id/safegroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105px"
                    android:layout_toRightOf="@+id/safetitle"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/safeopen"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_safe_open"
                        android:textColor="#666666"
                        android:textSize="25px" />

                    <RadioButton
                        android:id="@+id/safecolse"
                        android:layout_width="150px"
                        android:layout_height="65px"
                        android:gravity="left|center_vertical"
                        android:text="@string/base_setting_safe_close"
                        android:textColor="#666666"
                        android:textSize="25px" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/admincode"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_below="@+id/safe"
                android:layout_centerHorizontal="true"
                android:background="#00000000">

                <TextView
                    android:id="@+id/admincodetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/base_setting_title_admincode"
                    android:textColor="#156ec9"
                    android:textSize="25px" />



                <TextView
                    android:id="@+id/button_admin_code"
                    android:layout_width="300px"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="105px"
                    android:layout_toRightOf="@+id/admincodetitle"
                    android:background="#00000000"
                    android:gravity="left|center_horizontal"
                    android:text="@string/base_setting_title_admincode_button"
                    android:textColor="#156ec9"
                    android:textSize="25px" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>